@@ -64,6 +64,7 @@ static const char owl_h_fileIdent[] = "$Id$";
 #define OWL_MESSAGE_TYPE_ICQ        5
 #define OWL_MESSAGE_TYPE_YAHOO      6
 #define OWL_MESSAGE_TYPE_MSN        7
+#define OWL_MESSAGE_TYPE_LOOPBACK   8
 
 #define OWL_MESSAGE_DIRECTION_NONE  0
 #define OWL_MESSAGE_DIRECTION_IN    1
